gateway-api_example/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: gateway-system
spec:
  gatewayClassName: fadc-gateway-class

  addresses:
    - type: IPAddress
      value: 172.23.133.109
    - type: IPAddress
      value: 2001:db8::1a2b:5c4d
  listeners:
    - name: http-web
      port: 80
      protocol: HTTP
      hostname: "www.example.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              allow-gateway-access: "true"
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
    - name: http-alt
      port: 8082
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
    - name: https-web
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        # Apply your server certificate secret
        certificateRefs:
        - name: my-web-cert-secret
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
